--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
     "@types/node": "^18",
-    "nuxt": "^3.5.2"
+    "nuxt": "^3.5.2",
+    "sass": "^1.66.1",
+    "sass-loader": "^13.3.2"
   },
   "overrides": {
     "vue": "latest"
