--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue": "latest"
   },
   "dependencies": {
+    "@formkit/nuxt": "^0.18.4",
     "@pinia/nuxt": "^0.4.11",
     "@vueuse/core": "^10.2.1",
     "@vueuse/nuxt": "^10.2.1",
