--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@formkit/nuxt": "^0.18.4",
+    "@formkit/themes": "^0.18.5",
     "@pinia/nuxt": "^0.4.11",
     "@vueuse/core": "^10.2.1",
     "@vueuse/nuxt": "^10.2.1",
