--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxt/devtools": "latest",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
+    "@sidebase/nuxt-auth": "^0.6.0-beta.5",
     "@types/node": "^18",
     "nuxt": "^3.5.2",
     "sass": "^1.66.1",
